// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots interact|TextInputWithIcon default 1`] = `
.c0 {
  padding: 12px;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c39 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c5 {
  pointer-events: none;
}

.c41 .c5 {
  pointer-events: none;
}

.c3 {
  padding-right: 2.2em;
}

.c7 {
  padding-left: 2.2em;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  right: 0.5em;
}

.c6 svg {
  vertical-align: middle;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  left: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        onChange={[Function]}
        placeholder="Type something..."
        type="text"
        value=""
      />
      <span
        className="c5 c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c7 c4"
        onChange={[Function]}
        placeholder="Type something..."
        type="text"
        value=""
      />
      <span
        className="c5 c8"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|TextInputWithIcon disabled 1`] = `
.c0 {
  padding: 12px;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c39 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c5 {
  pointer-events: none;
}

.c41 .c5 {
  pointer-events: none;
}

.c3 {
  padding-right: 2.2em;
}

.c7 {
  padding-left: 2.2em;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  cursor: not-allowed;
  right: 0.5em;
}

.c6 svg {
  vertical-align: middle;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  cursor: not-allowed;
  left: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        disabled={true}
        onChange={[Function]}
        type="text"
        value="Disabled"
      />
      <span
        className="c5 c6"
        disabled={true}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c7 c4"
        disabled={true}
        onChange={[Function]}
        type="text"
        value="Disabled"
      />
      <span
        className="c5 c8"
        disabled={true}
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|TextInputWithIcon outlined 1`] = `
.c0 {
  padding: 12px;
}

.c9 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c10 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c11 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c12 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c13 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c14 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
}

.c21 .c5 {
  font-size: 1.5em;
}

.c22 .c5 {
  font-size: 1.5em;
}

.c23 .c5 {
  font-size: 1.5em;
}

.c24 .c5 {
  font-size: 1.5em;
}

.c25 .c5 {
  font-size: 1.5em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c39 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c40 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c4:hover {
  border: 1px solid #999;
}

.c4:focus {
  border: 1px solid #222;
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c5 {
  pointer-events: none;
}

.c41 .c5 {
  pointer-events: none;
}

.c3 {
  padding-right: 2.2em;
}

.c7 {
  padding-left: 2.2em;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  right: 0.5em;
}

.c6 svg {
  vertical-align: middle;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  left: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        onChange={[Function]}
        type="text"
        value="Outlined"
      />
      <span
        className="c5 c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c7 c4"
        onChange={[Function]}
        type="text"
        value="Outlined"
      />
      <span
        className="c5 c8"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|TextInputWithIcon purposes 1`] = `
.c0 {
  padding: 12px;
}

.c17 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c27 .c6 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c28 .c6 {
  font-size: 1.5em;
}

.c29 .c6 {
  font-size: 1.5em;
}

.c30 .c6 {
  font-size: 1.5em;
}

.c31 .c6 {
  font-size: 1.5em;
}

.c32 .c6 {
  font-size: 1.5em;
}

.c33 .c6 {
  font-size: 1.5em;
}

.c34 .c6 {
  font-size: 1.5em;
}

.c35 .c6 {
  font-size: 1.5em;
}

.c36 .c6 {
  font-size: 1.5em;
}

.c37 .c6 {
  font-size: 1.5em;
}

.c38 .c6 {
  font-size: 1.5em;
}

.c39 .c6 {
  font-size: 1.5em;
}

.c40 .c6 {
  font-size: 1.5em;
}

.c41 .c6 {
  font-size: 1.5em;
}

.c42 .c6 {
  font-size: 1.5em;
}

.c43 .c6 {
  font-size: 1.5em;
}

.c44 .c6 {
  font-size: 1.5em;
}

.c45 .c6 {
  font-size: 1.5em;
}

.c46 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c47 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c48 .c6 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c5 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c5:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c5:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c5::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c5[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c11 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #00a8d8;
  background-color: unset;
}

.c11:hover {
  border: 1px solid #999;
}

.c11:focus {
  border: 1px solid #222;
}

.c11::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c11[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c8 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c8:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c8:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c8::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c8[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c9:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c9:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c9::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c10 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c10:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c10:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c10::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c10[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c12 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 153,153,153;
  display: block;
  width: 100%;
  border: 1px solid #999;
  background-color: unset;
}

.c12:hover {
  border: 1px solid #999;
}

.c12:focus {
  border: 1px solid #222;
}

.c12::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c12[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c13 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 76,175,80;
  display: block;
  width: 100%;
  border: 1px solid #4caf50;
  background-color: unset;
}

.c13:hover {
  border: 1px solid #999;
}

.c13:focus {
  border: 1px solid #222;
}

.c13::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c13[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c14 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 239,83,80;
  display: block;
  width: 100%;
  border: 1px solid #ef5350;
  background-color: unset;
}

.c14:hover {
  border: 1px solid #999;
}

.c14:focus {
  border: 1px solid #222;
}

.c14::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c14[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c3 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 .c6 {
  pointer-events: none;
}

.c49 .c6 {
  pointer-events: none;
}

.c4 {
  padding-right: 2.2em;
}

.c15 {
  padding-left: 2.2em;
}

.c7 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  right: 0.5em;
}

.c7 svg {
  vertical-align: middle;
}

.c16 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  left: 0.5em;
}

.c16 svg {
  vertical-align: middle;
}

.c2 {
  display: grid;
  grid-gap: 20px;
  grid-template-columns: repeat(4, fit-content(200px));
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          className="c4 c5"
          onChange={[Function]}
          type="text"
          value="Primary"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c8"
          onChange={[Function]}
          type="text"
          value="Secondary"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c9"
          onChange={[Function]}
          type="text"
          value="Success"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c10"
          onChange={[Function]}
          type="text"
          value="Danger"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c11"
          onChange={[Function]}
          type="text"
          value="Primary"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c12"
          onChange={[Function]}
          type="text"
          value="Secondary"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c13"
          onChange={[Function]}
          type="text"
          value="Success"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c4 c14"
          onChange={[Function]}
          type="text"
          value="Danger"
        />
        <span
          className="c6 c7"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
    </div>
    <div
      className="c2"
    >
      <div
        className="c3"
      >
        <input
          className="c15 c5"
          onChange={[Function]}
          type="text"
          value="Primary"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c8"
          onChange={[Function]}
          type="text"
          value="Secondary"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c9"
          onChange={[Function]}
          type="text"
          value="Success"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c10"
          onChange={[Function]}
          type="text"
          value="Danger"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c11"
          onChange={[Function]}
          type="text"
          value="Primary"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c12"
          onChange={[Function]}
          type="text"
          value="Secondary"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c13"
          onChange={[Function]}
          type="text"
          value="Success"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
      <div
        className="c3"
      >
        <input
          className="c15 c14"
          onChange={[Function]}
          type="text"
          value="Danger"
        />
        <span
          className="c6 c16"
        >
          <svg
            fill="currentColor"
            height="1em"
            stroke="currentColor"
            strokeWidth="0"
            style={
              Object {
                "color": undefined,
              }
            }
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots interact|TextInputWithIcon sizes 1`] = `
.c0 {
  padding: 12px;
}

.c15 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c16 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c17 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c18 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c19 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c20 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c21 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c22 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c23 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c24 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c25 .c5 {
  font-size: 1.5em;
  margin-right: 0.625em;
}

.c26 .c5 {
  font-size: 1.5em;
}

.c27 .c5 {
  font-size: 1.5em;
}

.c28 .c5 {
  font-size: 1.5em;
}

.c29 .c5 {
  font-size: 1.5em;
}

.c30 .c5 {
  font-size: 1.5em;
}

.c31 .c5 {
  font-size: 1.5em;
}

.c32 .c5 {
  font-size: 1.5em;
}

.c33 .c5 {
  font-size: 1.5em;
}

.c34 .c5 {
  font-size: 1.5em;
}

.c35 .c5 {
  font-size: 1.5em;
}

.c36 .c5 {
  font-size: 1.5em;
}

.c37 .c5 {
  font-size: 1.5em;
}

.c38 .c5 {
  font-size: 1.5em;
}

.c39 .c5 {
  font-size: 1.5em;
}

.c40 .c5 {
  font-size: 1.5em;
}

.c41 .c5 {
  font-size: 1.5em;
}

.c42 .c5 {
  font-size: 1.5em;
}

.c43 .c5 {
  font-size: 1.5em;
}

.c44 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c45 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c46 .c5 {
  margin-right: 1.25em;
  display: inline-block;
  -webkit-transform: scale(1.5);
  -ms-transform: scale(1.5);
  transform: scale(1.5);
  -webkit-transform-origin: left 25%;
  -ms-transform-origin: left 25%;
  transform-origin: left 25%;
}

.c7 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c7:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c7:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c7::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c7[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c4 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 0.8125rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c4:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c4:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c4::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c4[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c9 {
  font-family: 'Fira Sans',sans-serif;
  font-weight: normal;
  font-size: 16px;
  color: #222;
  line-height: 1.5;
  font-size: 1.1875rem;
  box-sizing: border-box;
  padding: calc(0.5em - 1px) 0.5em;
  border-radius: 4px;
  outline: 0;
  border: 0;
  --focus-color: 0,168,216;
  display: block;
  width: 100%;
  border: 1px solid #eee;
  background-color: #eee;
}

.c9:hover {
  border-bottom: 1px solid rgba(var(--focus-color),0.5);
}

.c9:focus {
  border-bottom: 1px solid rgba(var(--focus-color),1);
}

.c9::-webkit-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::-moz-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9:-ms-input-placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9::placeholder {
  color: currentcolor;
  opacity: 0.5;
}

.c9[disabled] {
  cursor: not-allowed;
  box-shadow: inset 0 0 999em rgba(128,128,128,0.2);
}

.c2 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 .c5 {
  pointer-events: none;
}

.c47 .c5 {
  pointer-events: none;
}

.c3 {
  padding-right: 2.2em;
}

.c11 {
  padding-left: 2.2em;
}

.c8 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  right: 0.5em;
}

.c8 svg {
  vertical-align: middle;
}

.c13 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 20px;
  left: 0.5em;
}

.c13 svg {
  vertical-align: middle;
}

.c6 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 16.25px;
  right: 0.5em;
}

.c6 svg {
  vertical-align: middle;
}

.c10 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 23.75px;
  right: 0.5em;
}

.c10 svg {
  vertical-align: middle;
}

.c12 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 16.25px;
  left: 0.5em;
}

.c12 svg {
  vertical-align: middle;
}

.c14 {
  height: 1em;
  line-height: 1em;
  text-transform: none;
  position: absolute;
  font-size: 23.75px;
  left: 0.5em;
}

.c14 svg {
  vertical-align: middle;
}

.c1 {
  display: grid;
  grid-gap: 20px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
    >
      <input
        className="c3 c4"
        onChange={[Function]}
        type="text"
        value="Small"
      />
      <span
        className="c5 c6"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c3 c7"
        onChange={[Function]}
        type="text"
        value="Default"
      />
      <span
        className="c5 c8"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c3 c9"
        onChange={[Function]}
        type="text"
        value="Large"
      />
      <span
        className="c5 c10"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c11 c4"
        onChange={[Function]}
        type="text"
        value="Small"
      />
      <span
        className="c5 c12"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c11 c7"
        onChange={[Function]}
        type="text"
        value="Default"
      />
      <span
        className="c5 c13"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
    <div
      className="c2"
    >
      <input
        className="c11 c9"
        onChange={[Function]}
        type="text"
        value="Large"
      />
      <span
        className="c5 c14"
      >
        <svg
          fill="currentColor"
          height="1em"
          stroke="currentColor"
          strokeWidth="0"
          style={
            Object {
              "color": undefined,
            }
          }
          viewBox="0 0 24 24"
          width="1em"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 1L3 5v6c0 5.55 3.84 10.74 9 12 5.16-1.26 9-6.45 9-12V5l-9-4zm-2 16l-4-4 1.41-1.41L10 14.17l6.59-6.59L18 9l-8 8z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;
